about page updated

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -6,8 +6,9 @@ import Stats from '~/components/widgets/Stats.astro';
 import Steps2 from '~/components/widgets/Steps2.astro';
 import Layout from '~/layouts/PageLayout.astro';
 
+
 const metadata = {
-  title: 'About us',
+  title: 'About our Lab',  
 };
 ---
 
@@ -15,9 +16,9 @@ const metadata = {
   <!-- Hero Widget ******************* -->
 
   <Hero
-    tagline="About us"
+    tagline="About Our Lab"
     image={{
-      src: 'https://images.unsplash.com/photo-1559136555-9303baea8ebd?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80',
+      src: '~/assets/images/US.jpg',
       alt: 'Caos Image',
     }}
   >
