--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,33 +13,40 @@ import Stats from '~/components/widgets/Stats.astro';
 import CallToAction from '~/components/widgets/CallToAction.astro';
 
 const metadata = {
-  title: 'AstroWind — Free template for creating websites with Astro + Tailwind CSS',
+  title: 'OBrain Lab— The Interplay of Obesity and The Brain',
   ignoreTitleTemplate: true,
 };
 ---
 
 <Layout metadata={metadata}>
   <!-- Hero Widget ******************* -->
-
+  
   <Hero
     actions={[
-      {
+   /*    {
         variant: 'primary',
         text: 'Get template',
         href: 'https://github.com/arthelokyo/astrowind',
         target: '_blank',
         icon: 'tabler:download',
       },
-      { text: 'Learn more', href: '#features' },
+      { text: 'Learn more', href: '#features' }, */
     ]}
-    image={{ src: '~/assets/images/hero-image.png', alt: 'AstroWind Hero Image' }}
+    isFullImage
+  image={{
+    src: '~/assets/images/Sample1.jpg',
+    alt: '',                      // decorative background — empty alt is valid
+    loading: 'eager',
+    "aria-hidden": "true"         // optional — hides decorative image from assistive tech
+  }}
+
   >
-    <Fragment slot="title">
+<!--     <Fragment slot="title">
       Free template for <span class="hidden xl:inline">creating websites with</span>
       <span class="text-accent dark:text-white"> Astro 5.0</span> + Tailwind CSS
-    </Fragment>
+    </Fragment> -->
 
-    <Fragment slot="subtitle">
+<!--     <Fragment slot="subtitle">
       <span class="hidden sm:inline">
         <span class="font-semibold">AstroWind</span> is a free, customizable and production-ready template for Astro 5.0
         + Tailwind CSS.</span
@@ -47,7 +54,7 @@ const metadata = {
       <span class="block mb-1 sm:hidden font-bold text-blue-600">AstroWind: Production-ready.</span>
       Suitable for Startups, Small Business, SaaS websites, Professional Portfolios, Marketing websites, Landing Pages &
       Blogs.
-    </Fragment>
+    </Fragment> -->
   </Hero>
 
   <!-- Note Widget ******************* -->
