--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
 import Layout from '~/layouts/PageLayout.astro';
-
+//import fluffy from '~/assets/images/fluffy-opt.gif';
 import Hero from '~/components/widgets/Hero.astro';
 import Note from '~/components/widgets/Note.astro';
 import Features from '~/components/widgets/Features.astro';
@@ -34,7 +34,7 @@ const metadata = {
     ]}
     
   image={{
-    src: '~/assets/images/Sample1.jpg',
+    src: '~/assets/images/hero-image.png',
     alt: '',                      // decorative background — empty alt is valid
     loading: 'eager',
     "aria-hidden": "true"         // optional — hides decorative image from assistive tech
