still changes to index

--- a/src/components/widgets/Header.astro
+++ b/src/components/widgets/Header.astro
@@ -41,7 +41,7 @@ const {
   isFullWidth = false,
   showToggleTheme = false,
   showRssFeed = false,
-  position = 'center',
+  position = 'left',
 } = Astro.props;
 
 const currentPath = `/${trimSlash(new URL(Astro.url).pathname)}`;
