--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -59,7 +59,7 @@ const metadata = {
 
   <!-- Note Widget ******************* -->
 
-  <Note title="Philosophy:" description="Simplicity, Best Practices and High Performance" />
+  <Note title="" description="Why do some people develop unhealthy eating styles while others do not, although many of us share similar environments? And why do many people with obesity struggle to stick to their dietary goals? <br>The answer could be found in our brain, which determines how and why we make certain decisions and how we process information." />
 
   <!-- Features Widget *************** -->
 
