--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,14 +13,15 @@ import Stats from '~/components/widgets/Stats.astro';
 import CallToAction from '~/components/widgets/CallToAction.astro';
 
 const metadata = {
-  title: 'OBrain Lab— The Interplay of Obesity and The Brain',
+  
+  title: 'O\'Brain Lab',
   ignoreTitleTemplate: true,
 };
 ---
 
 <Layout metadata={metadata}>
   <!-- Hero Widget ******************* -->
-  
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   <Hero
     actions={[
    /*    {
