research and project started

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -324,10 +324,7 @@ const metadata = {
 
   <BlogLatestPosts
     title="Find out more content in our Blog"
-    information={`The blog is used to display AstroWind documentation.
-                        Each new article will be an important step that you will need to know to be an expert in creating a website using Astro + Tailwind CSS.
-                        Astro is a very interesting technology. Thanks.
-                `}
+    information={`Follow our blog for the latest news in the LAB. Stay updated with our ongoing projects, and recent publications. The following are the latest highlightm but check out for all posts.`}
   />
 
   <!-- FAQs Widget ******************* -->
