--- a/src/components/widgets/Content.astro
+++ b/src/components/widgets/Content.astro
@@ -36,8 +36,8 @@ const {
     subtitle={subtitle}
     tagline={tagline}
     classes={{
-      container: 'max-w-xl sm:mx-auto lg:max-w-2xl',
-      title: 'text-4xl md:text-5xl font-bold tracking-tighter mb-4 font-heading',
+      container: 'max-w-4xl sm:mx-auto lg:max-w-6xl',
+      title: 'text-3xl md:text-4xl font-semibold tracking-tighter mb-4 font-heading',
       subtitle: 'max-w-3xl mx-auto sm:text-center text-xl text-muted dark:text-slate-400',
     }}
   />
