project page final

--- a/src/components/widgets/projects.astro
+++ b/src/components/widgets/projects.astro
@@ -73,9 +73,8 @@ const metadata = {
 
   <!-- Lab Introduction **************** -->
 
-  <Features4 id="lab-intro" >
-    <Fragment slot="content" >
-      
+  <Features4 id="lab-intro" classes={{ container: '-mt-12 md:-mt-16' }}
+    <Fragment slot="content">
       We at the <span class="font-semibold">O'BRAIN LAB</span> believe that multiple individual factors determine what and 
       how much we eat and how susceptible a person is to develop obesity. Individual differences in behavior, 
       governed by cognitive processes and traits like reward-sensitivity, reinforcement learning or executive functions, 
