--- a/src/pages/research/projects.astro
+++ b/src/pages/research/projects.astro
@@ -83,7 +83,9 @@ const metadata = {
       can be acquired and shaped throughout the lifespan but are presumably influenced by underlying genetic predispositions as well. 
       With our research, we aim to identify neurocognitive profiles that can explain what factors contribute to certain eating 
       habits on the individual level. Ultimately, our research will help prevent the progression and treatment of maladaptive eating 
-      habits and obesity by developing individualized intervention strategies. We tackle this ambitious goal by drawing upon multiple 
+      habits and obesity by developing individualized intervention strategies. <br />
+      <br />
+       We tackle this ambitious goal by drawing upon multiple 
       scientific disciplines such as biology, psychology, neuro- and cognitive sciences, medicine, nutritional sciences, and mathematics. Since 2019 our lab is based at 
       the <a href="https://www.helsinki.fi/en/faculty-medicine/research/disciplines/psychology" target="_blank" rel="noopener noreferrer" class="text-blue-600 dark:text-blue-400 hover:underline">University of Helsinki</a>, 
       Finland and we have a close collaboration with the 
