--- a/src/pages/research/startup.astro
+++ b/src/pages/research/startup.astro
@@ -14,7 +14,7 @@ import Brands from '~/components/widgets/Brands.astro';
 import { YouTube } from 'astro-embed';
 
 const metadata = {
-  title: 'Startup Landing Page',
+  title: 'Methods Landing Page',
 };
 ---
 
@@ -22,7 +22,7 @@ const metadata = {
   <!-- Hero Widget ******************* -->
 
   <Hero
-    tagline="Startup Web Demo"
+    tagline="Methods Web Demo"
     actions={[
       {
         variant: 'primary',
@@ -36,7 +36,7 @@ const metadata = {
   >
     <Fragment slot="title">
       Improve <span class="hidden sm:inline">the online presence of</span> your <span
-        class="text-accent dark:text-white">Startup</span
+        class="text-accent dark:text-white">Methods</span
       > with Astrowind templates
     </Fragment>
 
@@ -59,7 +59,7 @@ const metadata = {
   <!-- Features2 Widget ************** -->
 
   <Features2
-    title="About us"
+    title="About me"
     subtitle="We believe in the magic of turning dreams into stunning realities. Founded by passionate developers with a shared vision, we set out to simplify the website creation process. Our templates bring together the innovation of Astro 5.0 and the versatility of Tailwind CSS, enabling you to express your unique brand identity like never before."
   >
     <Fragment slot="bg">
