--- a/src/components/widgets/Brands.astro
+++ b/src/components/widgets/Brands.astro
@@ -29,7 +29,27 @@ const {
           (image) =>
             image.src && (
               <div class="flex justify-center col-span-1 my-2 lg:my-4 py-1 px-3 rounded-md dark:bg-gray-200">
-                <Image src={image.src} alt={image.alt || ''} class="max-h-12" width={120} height={48} layout="fixed" />
+                {image.href ? (
+                  <a href={image.href} target="_blank" rel="noopener noreferrer" class="block">
+                    <img 
+                      src={image.src} 
+                      alt={image.alt || ''} 
+                      class={image.class || "h-auto"} 
+                      width={image.width || 120} 
+                      height={image.height || 120}
+                      loading="lazy"
+                    />
+                  </a>
+                ) : (
+                  <img 
+                    src={image.src} 
+                    alt={image.alt || ''} 
+                    class={image.class || "h-auto"} 
+                    width={image.width || 120} 
+                    height={image.height || 120}
+                    loading="lazy"
+                  />
+                )}
               </div>
             )
         )
