publications pag tweaks

--- a/src/pages/research/funding.astro
+++ b/src/pages/research/funding.astro
@@ -11,11 +11,11 @@ import Button from '~/components/ui/Button.astro';
 import Brands from '~/components/widgets/Brands.astro';
 import { headerData } from '~/navigation';
 
-const appStoreImg = '~/assets/images/app-store.png';
-const appStoreDownloadLink = 'https://github.com/arthelokyo/astrowind';
+//const appStoreImg = '~/assets/images/app-store.png';
+//const appStoreDownloadLink = 'https://github.com/arthelokyo/astrowind';
 
-const googlePlayImg = '~/assets/images/google-play.png';
-const googlePlayDownloadLink = 'https://github.com/arthelokyo/astrowind';
+//const googlePlayImg = '~/assets/images/google-play.png';
+//const googlePlayDownloadLink = 'https://github.com/arthelokyo/astrowind';
 
 const metadata = {
   title: 'Funding & Collaborations',
